about to rearange the order of things

--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "homepage": "https://github.com/21beckem/Gospel-Zoom-Puppeteer#readme",
   "dependencies": {
     "@nut-tree/nut-js": "^2.0.1",
+    "express": "^4.17.3",
     "ip": "^1.1.5",
     "node-global-key-listener": "^0.0.13",
-    "puppeteer": "^13.5.1"
+    "puppeteer": "^13.5.1",
+    "screenshot-desktop": "^1.12.7",
+    "socket.io": "^4.4.1"
   }
 }
