--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "gospel zoom using chrome puppeteer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "pkg -t node16-win-x64 index.js && move /y index.exe releaseTest/Gospel-Zoom.exe"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,10 @@
   "homepage": "https://github.com/21beckem/Gospel-Zoom-Puppeteer#readme",
   "dependencies": {
     "@nut-tree/nut-js": "^2.0.1",
+    "edge-paths": "^2.2.1",
     "express": "^4.17.3",
     "ip": "^1.1.5",
-    "node-global-key-listener": "^0.0.13",
     "puppeteer": "^13.5.1",
-    "screenshot-desktop": "^1.12.7",
     "socket.io": "^4.4.1"
   }
 }
